adding some layout to the application

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,11 @@
 
 
 </head>
-<body>
-  <app-root></app-root>
+<body class="hold-transition skin-blue sidebar-mini">
+  
+  <div class="wrapper">
+    <app-root></app-root>
+  </div>
 
   <!-- JS Scripts for lyfe -->
   <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
