add news service, trying to upload a news (not yet finished)

--- a/src/index.html
+++ b/src/index.html
@@ -28,26 +28,33 @@
   
   <app-root></app-root>
 
-  <!-- JS Scripts for lyfe -->
-  <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
-  <!-- Bootstrap 3.3.7 -->
-  <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
-  <!-- FastClick -->
-  <!-- <script src="../node_modules/fastclick/lib/fastclick.js"></script> -->
-  <!-- AdminLTE App -->
-  <!-- <script src="../node_modules/admin-lte/dist/js/adminlte.min.js"></script> -->
-  <!-- Sparkline -->
-  <!-- <script src="../node_modules/jquery-sparkline/dist/jquery.sparkline.min.js"></script> -->
-  <!-- jvectormap  -->
-  <!-- <script src="../node_modules/admin-lte/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script> -->
-  <!-- <script src="../node_modules/admin-lte/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script> -->
-  <!-- SlimScroll -->
-  <!-- <script src="../node_modules/jquery-slimscroll/jquery.slimscroll.min.js"></script> -->
-  <!-- ChartJS -->
-  <!-- <script src="../node_modules/chart.js/Chart.js"></script> -->
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <!-- <script src="assets/dist/js/pages/dashboard2.js"></script> -->
-  <!-- AdminLTE for demo purposes -->
-  <!-- <script src="../node_modules/admin-lte/dist/js/demo.js"></script> -->
+  <!-- jQuery 3 -->
+<!-- <script src="../node_modules/bower_components/jquery/dist/jquery.min.js"></script> -->
+<!-- Bootstrap 3.3.7 -->
+<!-- <script src="../node_modules/bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
+<!-- Select2 -->
+<!-- <script src="../node_modules/bower_components/select2/dist/js/select2.full.min.js"></script> -->
+<!-- InputMask -->
+<!-- <script src="../node_modules/plugins/input-mask/jquery.inputmask.js"></script> -->
+<!-- <script src="../node_modules/plugins/input-mask/jquery.inputmask.date.extensions.js"></script> -->
+<!-- <script src="../node_modules/plugins/input-mask/jquery.inputmask.extensions.js"></script> -->
+<!-- date-range-picker -->
+<!-- <script src="../node_modules/bower_components/moment/min/moment.min.js"></script> -->
+<!-- <script src="../node_modules/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script> -->
+<!-- bootstrap datepicker -->
+<!-- <script src="../node_modules/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script> -->
+<!-- bootstrap color picker -->
+<!-- <script src="../node_modules/bower_components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script> -->
+<!-- bootstrap time picker -->
+<!-- <script src="../node_modules/plugins/timepicker/bootstrap-timepicker.min.js"></script> -->
+<!-- SlimScroll -->
+<!-- <script src="../node_modules/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script> -->
+<!-- iCheck 1.0.1 -->
+<!-- <script src="../node_modules/plugins/iCheck/icheck.min.js"></script> -->
+<!-- FastClick -->
+<!-- <script src="../node_modules/bower_components/fastclick/lib/fastclick.js"></script> -->
+<!-- AdminLTE App -->
+<!-- <script src="../node_modules/dist/js/adminlte.min.js"></script> -->
+  
 </body>
 </html>
