add image compression

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
 </head>
 <body>
   
-  <app-root></app-root>
+  <div class="wrapper">
+    <app-root></app-root>
+  </div>
 
   <!-- jQuery 3 -->
 <!-- <script src="../node_modules/bower_components/jquery/dist/jquery.min.js"></script> -->
