store almost completed

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 
 </head>
-<body>
+<Body>
   
   <div class="wrapper">
     <app-root></app-root>
@@ -58,5 +58,5 @@
 <!-- AdminLTE App -->
 <!-- <script src="../node_modules/dist/js/adminlte.min.js"></script> -->
   
-</body>
+</Body>
 </html>
