--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: fonts.googleapis.com;">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+
+
   <!-- CSS stylesheet for lyfe -->
   <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
   <!-- Font Awesome -->
